ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: ufc
spec:
  type: ExternalName
  externalName: google.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knative-hello
  namespace: ufc
spec:
  ingressClassName: nginx-internal-ui
  rules:
    - host: ufctest.pshb.local
      http:
        paths:
          - path: /api/v1/public/knative/
            pathType: ImplementationSpecific
            backend:
              service:
                name: test
                port:
                  number: 80
